Manifest/rails-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rails
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rails
  template:
    metadata:
      labels:
        app: rails
    spec:
      containers:
      - name: rails
        image: skhussain786/myrail-app:1.0
        ports:
        - containerPort: 3000
